# learning-python

my_project/: pyproject.toml
simple-calculator/: pyproject.toml
simple-calculator/src/simple_calculator/: __init__.py
simple-calculator/src/simple_calculator/utils/: math.py
simple-todo/: pyproject.toml
simple-todo/src/simple_todo/: __init__.py  cli.py  file.py  main.py  todo_item.py  todo_list.py
simple-todo/src/simple_todo/storage/: storage_base.py  storage_csv.py  storage_json.py
simple-todo/storage/: storage.csv  storage.json
weather_app/: pyproject.toml
weather_app/src/weather_app/: __init__.py
