[project]
name = "simple-todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Niklas Schubert",email = "niklas.schubert@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8 (>=2.3.2,<3.0.0)",
    "pylenium (>=1.0,<2.0)"
]

[tool.poetry]
packages = [{include = "simple_todo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
