[project]
name = "weather-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Niklas Schubert",email = "niklas.schubert@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "weather_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
